trying to connect css

--- a/css/index.css
+++ b/css/index.css
@@ -2,16 +2,18 @@ body {
     max-width: 800px;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #fffaf7;
+    color: #002500;
 }
 header {
-    background-color: #a34035;
+    background-color: #555A49;
     border-radius: 15px;
     padding: 8px;
-    color: white;
+    color: #fffaf7;
     font-family: Arial, Helvetica, sans-serif;
 }
 footer {
-    background-color: #a34035;
+    background-color: #555A49;
     text-align: center;
     border-radius: 15px;
     color: white;
@@ -27,12 +29,15 @@ footer a:hover {
 }
 
 .highlighted {
-    color: rgb(247, 247, 130);
+    color: rgb(250, 250, 250);
     font-size:.8em;
 } 
 main {
     margin: 0 auto;
     padding: 0 15px;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    gap: 10px;
 }
 
 h1 {
@@ -43,6 +48,7 @@ h1 {
 h2 {
     border-bottom: 1px solid black;
     font-family: Arial, Helvetica, sans-serif;
+    grid-column: 1/3;
 }
 
 li {
@@ -55,13 +61,30 @@ li {
     width: 150px;
     border-radius: 5px;
 }
+
 li {
     list-style: none;
+    padding: 10px;
 }
+
 a {
-    text-decoration: none;
     color: black;
 }
+
 a:hover {
-    background-color: #a34035;
+    background-color: #C4C8BC;
+    padding: 10px;
 }
+.card {
+    background-color: #929982;
+    border-radius: 20px;
+    width: 95%;
+    padding: 10px;
+}
+
+/* colors I liked
+    red: #a34035;
+    tan: #EDCBB1;
+    green: #929982;
+    darkgreen: #002500;
+    lightbackground: fffaf7; */
