--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 body {
-    max-width: 800px;
+    max-width: 1200px;
+    padding-top: 10px;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #fffaf7;
@@ -81,11 +82,14 @@ a:hover {
     width: 95%;
     padding: 10px;
 }
-
+.pdf {
+    margin: 10px 20px;
+}
 
 embed {
+    margin: 10px 0px 10px -10px;
     width: 1200px;
-    height: 700px;
+    height: 650px;
 }
 
 /* colors I liked
